avformat/mov: improve timecode calculation

Fixes timecode calculation for NTSC frame rates.
Fixes ticket #5978.